# Customer-Transaction-Management-System

ShopApplication/: CMakeLists.txt  addcustomerdialog.cpp  addcustomerdialog.h  additemdialog.cpp  additemdialog.h  addtransactiondialog.cpp  addtransactiondialog.h  customer.cpp  customer.h  customerlist.cpp  customerlist.h  item.cpp  item.h  itemlist.cpp  itemlist.h  itemlistbackup.cpp  itemlistbackup.h  mainwindow.cpp  mainwindow.h  transaction.cpp  transaction.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  udpsender.cpp  udpsender.h  xmlwriter.cpp  xmlwriter.h
